--- a/_posts/2024-01-31-cache.md
+++ b/_posts/2024-01-31-cache.md
@@ -1,11 +1,11 @@
 ---
 layout:     post
-title:      The system design: Cache
+title:      The system design - Cache
 subtitle:   The cache is a layer that stores a subset of data, typically the most frequently accessed or essential information, in a location quicker to access than its primary storage location. This caching strategy is used to reduce latency and improve the efficiency of data retrieval across the distributed system.
-date:       2023-01-31
+date:       2024-01-31
 author:     NDA
 header-img: img/post-bg-ios9-web.jpg
-catalog: true
+catalog:    true
 tags:
     - System Design
     - Cache
@@ -13,8 +13,8 @@ tags:
 
 >The cache is a layer that stores a subset of data, typically the most frequently accessed or essential information, in a location quicker to access than its primary storage location. This caching strategy is used to reduce latency and improve the efficiency of data retrieval across the distributed system. https://hackernoon.com/the-system-design-cheat-sheet-cache
 
-# Terms of Caching
-
+Terms of Caching
+-----
 
 * **Cache Hit**: Occurs when the requested data is found in the cache, allowing for faster data retrieval.
 * **Cache Miss**: This happens when the requested data is not in the cache, necessitating fetching the data from its primary storage location.
@@ -26,7 +26,8 @@ tags:
     * **Warm**: Cache is not as actively used as a hot cache but still contains relatively frequently accessed data.
     * **Cold**: Cache is first initialized and has not yet had any data loaded.
 
-# Benefits of using Caching
+Benefits of using Caching
+-----
 
 * **Reduced Latency**: Caching significantly decreases the time it takes to access data, leading to faster response times for user requests.
 * **Decreased Network Traffic**: By storing frequently accessed data locally, caching reduces the amount of data that must be transmitted over a network, thereby decreasing network congestion.
@@ -35,7 +36,8 @@ tags:
 * **Increased Throughput**: Systems can handle more data and user requests in a given time due to the efficiency gains from caching.
 * **Data Availability**: In some caching strategies, data can still be available even if the primary data source is temporarily unavailable.
 
-# Challenges of using Caching
+Challenges of using Caching
+-----
 
 * **Cache Coherence**: Ensuring that data remains consistent across multiple caches in a distributed system.
 * **Cache Invalidation**: Deciding when and how to update or remove data in the cache, especially when the original data changes.
