--- a/_posts/2024-01-31-cache.md
+++ b/_posts/2024-01-31-cache.md
@@ -1,8 +1,7 @@
 ---
 layout:     post
 title:      The system design - Cache
-subtitle:   The cache is a layer that stores a subset of data, typically the most frequently accessed or essential information, in a location quicker to access than its primary storage location. This caching strategy is used to reduce latency and improve the efficiency of data retrieval across the distributed system.
-date:       2024-01-31
+subtitle:   
 author:     NDA
 header-img: img/post-bg-ios9-web.jpg
 catalog:    true
