--- a/_posts/2024-01-31-cache.md
+++ b/_posts/2024-01-31-cache.md
@@ -62,13 +62,13 @@ Challenges of using Caching
 3. **Load Balancer / API Gateway**: Balancing incoming network traffic and requests across multiple servers and potentially caching these requests.
 
 4. **Application**: Caching within an application to improve performance and data access.
-    a. **CPU Cache**: Stores frequently accessed data to reduce CPU access time.
+    * **CPU Cache**: Stores frequently accessed data to reduce CPU access time.
         * **L1**: Instruction and Data
         * **L2**: Shared or per-core L2 cache
         * **L3**: Shared among multiple CPU cores
-    b. **In-memory Cache**: Caching data within a single application process.
-    c. **Shared Memory Cache**: Sharing cached data across different processes in the same system.
-    d. **Disk Cache**: Caching read operations from a physical disk.
+    * **In-memory Cache**: Caching data within a single application process.
+    * **Shared Memory Cache**: Sharing cached data across different processes in the same system.
+    * **Disk Cache**: Caching read operations from a physical disk.
         * **File System Caching**: The file system may cache frequently accessed data and metadata.
         * **Operating System-Level Disk Caches**: Modern operating systems often employ disk caching to improve I/O performance system-wide.
         * **Application-Specific Caches**: Some applications implement their caching mechanisms to store and manage frequently used data.
@@ -82,8 +82,8 @@ Challenges of using Caching
 
 7. **Database: Storing** frequently accessed database queries and results to speed up future requests.
 
-Top Caching Strategies
-------
+# Top Caching Strategies
+
 ## Cache Aside
 
 ![](https://hackernoon.imgix.net/images/iOvSeC4bWUctj2q3XImABGDqXVO2-yj93ddj.png)
@@ -93,6 +93,7 @@ Also known as "Lazy Loading," this strategy involves loading data into the cache
 **Pros:**
 * Prevents unnecessary data from being loaded into the cache.
 * Offers fine-grained control over what is cached.
+
 **Cons:**
 * This can lead to increased latency for cache misses as the application must wait for data to be loaded from the database.
 * Requires additional complexity in application code to manage caching logic.
