--- a/_posts/2024-01-31-cache.md
+++ b/_posts/2024-01-31-cache.md
@@ -53,7 +53,7 @@ Challenges of using Caching
 
 # Types of Caching
 
-![](https://hackernoon.imgix.net/images/iOvSeC4bWUctj2q3XImABGDqXVO2-rl83dcd.jpeg)
+![](/img/posts/cache/cache_01-min.svg)
 
 1. **Client Side**: Caching web content in a browser or device to accelerate content retrieval.
 
@@ -86,7 +86,7 @@ Challenges of using Caching
 
 ## Cache Aside
 
-![](https://hackernoon.imgix.net/images/iOvSeC4bWUctj2q3XImABGDqXVO2-yj93ddj.png)
+![](/img/posts/cache/cache_02-min.svg)
 
 Also known as "Lazy Loading," this strategy involves loading data into the cache on demand. When an application requests data, it first checks the cache. If the data is not found (cache miss), it is fetched from the database and stored in the cache for future requests.
 
@@ -100,7 +100,7 @@ Also known as "Lazy Loading," this strategy involves loading data into the cache
 
 ## Read Through
 
-![](https://hackernoon.imgix.net/images/iOvSeC4bWUctj2q3XImABGDqXVO2-b8a3dxc.jpeg)
+![](/img/posts/cache/cache_03-min.svg)
 
 In this approach, data is automatically loaded into the cache from the database when there is a cache miss. The application only interacts with the cache and not directly with the database for read operations.
 
@@ -114,7 +114,7 @@ In this approach, data is automatically loaded into the cache from the database 
 
 ## Write Around
 
-![](https://hackernoon.imgix.net/images/iOvSeC4bWUctj2q3XImABGDqXVO2-n1b3d8j.jpeg)
+![](/img/posts/cache/cache_04-min.svg)
 
 When data is written, it is written directly to the database and not to the cache. The cache is only updated when data is read.
 
@@ -128,7 +128,7 @@ When data is written, it is written directly to the database and not to the cach
 
 ## Write Back (Write Behind)
 
-![](https://hackernoon.imgix.net/images/iOvSeC4bWUctj2q3XImABGDqXVO2-1ac3dzf.jpeg)
+![](/img/posts/cache/cache_05-min.svg)
 
 Data is first written to the cache and then, after a certain amount of time or under certain conditions, written back to the database. This allows for batch updates.
 
@@ -142,7 +142,7 @@ Data is first written to the cache and then, after a certain amount of time or u
 
 ## Write Through
 
-![](https://hackernoon.imgix.net/images/iOvSeC4bWUctj2q3XImABGDqXVO2-11d3dus.jpeg)
+![](/img/posts/cache/cache_06-min.svg)
 
 Data is written simultaneously to the cache and the database. This ensures data consistency between the cache and database.
 
