--- a/_posts/2024-01-31-cache.md
+++ b/_posts/2024-01-31-cache.md
@@ -3,7 +3,7 @@ layout:     post
 title:      Cache - System design
 subtitle:   
 author:     NDA
-header-img: img/post-bg-ios9-web.jpg
+header-img: img/posts/bg01.png
 catalog:    true
 tags:
     - System Design
