--- a/_posts/2024-01-31-cache.md
+++ b/_posts/2024-01-31-cache.md
@@ -4,6 +4,7 @@ title:      Cache - System design
 subtitle:   
 author:     NDA
 header-img: img/posts/bg01.png
+header-mask: 0.6
 catalog:    true
 tags:
     - System Design
