--- a/_posts/2022-01-01-Intro.md
+++ b/_posts/2022-01-01-Intro.md
@@ -4,7 +4,7 @@ title:      Template post
 subtitle:   Template post for blog
 date:       2017-01-06
 author:     NDA
-header-img: img/post-bg-ios9-web.jpg
+header-img: img/bg/wave3.svg
 catalog: true
 tags:
     - Template
