--- a/_posts/2024-02-01-network.md
+++ b/_posts/2024-02-01-network.md
@@ -141,160 +141,80 @@ Combination of two or more topologies.
 
 Network protocols are rules or standards that define how data is transmitted and received over a network. These protocols ensure that devices on a network (or across multiple networks) can communicate with each other in a standardized way.
 
-Common Protocols
-TCP/IP: The fundamental suite of protocols that powers the Internet. TCP ensures data is sent correctly, and IP provides data is sent to the correct place.
-UDP: A connectionless protocol that, unlike TCP, doesn't establish a connection before sending data and doesn't guarantee the order of data packets.
-HTTP, HTTPS: Protocols used for transferring web pages on the Internet. HTTPS includes security measures to encrypt data.
-FTP: A protocol designed to transfer files over a network.
-SMTP: Used for email transmission.
-IMAP: Used for retrieving and storing emails from a mail server.
-POP3: Used for retrieving emails from a mail server.
-ICMP: Used for error reporting and diagnostics related to IP processing.
-DNS: Translates domain names to IP addresses, allowing users to access websites using human-readable names.
-DHCP: Assigns IP addresses dynamically to devices on a network.
-SSL/TLS: Cryptographic protocols are designed to provide secure communication over a computer network.
-PPP: Point-to-Point Protocol (PPP) is basically an asymmetric protocol suite for various connections or links without framing.
-Ethernet: Defines how devices on a local area network (LAN) communicate. It operates at both the physical layer and the data link layer of the OSI model.
+**Common Protocols**
+* **TCP/IP**: The fundamental suite of protocols that powers the Internet. TCP ensures data is sent correctly, and IP provides data is sent to the correct place.
+* **UDP**: A connectionless protocol that, unlike TCP, doesn't establish a connection before sending data and doesn't guarantee the order of data packets.
+* **HTTP, HTTPS**: Protocols used for transferring web pages on the Internet. HTTPS includes security measures to encrypt data.
+* **FTP**: A protocol designed to transfer files over a network.
+* **SMTP**: Used for email transmission.
+* **IMAP**: Used for retrieving and storing emails from a mail server.
+* **POP3**: Used for retrieving emails from a mail server.
+* **ICMP**: Used for error reporting and diagnostics related to IP processing.
+* **DNS**: Translates domain names to IP addresses, allowing users to access websites using human-readable names.
+* **DHCP**: Assigns IP addresses dynamically to devices on a network.
+* **SSL/TLS**: Cryptographic protocols are designed to provide secure communication over a computer network.
+* **PPP**: Point-to-Point Protocol (PPP) is basically an asymmetric protocol suite for various connections or links without framing.
+* **Ethernet**: Defines how devices on a local area network (LAN) communicate. It operates at both the physical layer and the data link layer of the OSI model.
 
+# OSI and TCP/IP Models
 
+The OSI and TCP/IP are two primary models that serve as guiding frameworks that describe the processes involved in data communication over a network.
 
+| a | OSI Model | Protocol | Data Format | TCP/IP Model
+|-|-|-|-|-|
+| 7 | Application | HTTP, DNS, SMTP, FTP | Data | Application
+| 6 | Presentation | TLS, SSL | Data | Application
+| 5 | Session | Sockets | Data | Application 
+| 4 | Transport | TCP, UDP | Segment, Packet | Transport
+| 3 | Network | IP, ICMP, IPsec | IP Datagram | Internet
+| 2 | Data Link | PPP, Ethernet | Frame | Network Interface
+| 1 | Physical | Fiber, Wireless | Bit | Network Interface
 
-1. **Client Side**: Caching web content in a browser or device to accelerate content retrieval.
+The **OSI** (Open Systems Interconnection) model is a conceptual framework for understanding network interactions in seven layers. Each layer serves a specific function:
 
-2. **CDN (Content Delivery Network)**: Distributing content across multiple geographic locations to improve access speed.
+1. **Physical**: Deals with the physical connection between devices. It defines the hardware elements, such as cables, switches, and NICs.
+2. **Data Link**: Responsible for creating a reliable link between two directly connected nodes, handling errors, and regulating data flow.
+3. **Network**: Determines the best path to transfer data from the source to the destination across the network.
+4. **Transport**: Ensures end-to-end communication, data flow control, and error correction.
+5. **Session**: Establishes, maintains, and terminates application connections at both ends.
+6. **Presentation**: Translates data between the application and transport layers, ensuring data is readable.
+7. **Application**: Directly interacts with end-user applications, ensuring effective communication between software and lower layers of the OSI model.
 
-3. **Load Balancer / API Gateway**: Balancing incoming network traffic and requests across multiple servers and potentially caching these requests.
+The **TCP/IP** is a more concise model used predominantly in the modern internet, which simplifies the OSI layers into four categories:
 
-4. **Application**: Caching within an application to improve performance and data access.
-    * **CPU Cache**: Stores frequently accessed data to reduce CPU access time.
-        * **L1**: Instruction and Data
-        * **L2**: Shared or per-core L2 cache
-        * **L3**: Shared among multiple CPU cores
-    * **In-memory Cache**: Caching data within a single application process.
-    * **Shared Memory Cache**: Sharing cached data across different processes in the same system.
-    * **Disk Cache**: Caching read operations from a physical disk.
-        * **File System Caching**: The file system may cache frequently accessed data and metadata.
-        * **Operating System-Level Disk Caches**: Modern operating systems often employ disk caching to improve I/O performance system-wide.
-        * **Application-Specific Caches**: Some applications implement their caching mechanisms to store and manage frequently used data.
-        * **Third-Party Caching Solutions**: Some third-party caching solutions and libraries can be integrated into applications to provide caching capabilities.
-5. **Distributed Cache**: Sharing cache across multiple systems or services. Sharding techniques:
-    * **Key-Based Sharding**: Data is partitioned and distributed across cache nodes based on the keys of cached items.
-    * **Range-based**: Distributing data based on a range of values.
-    * **Hash-Based Sharding**: Data is partitioned using a hash function that evenly distributes keys across multiple shards.
-    * **Consistent Hashing**: This technique combines the benefits of key-based and hash-based sharding. It uses a consistent hashing algorithm to map keys to cache nodes, allowing for dynamic scaling without significant data redistribution.
-6. **Full-text Search**: Indexing and searching through documents or logs.
+1. **Network Interface**: Combines the functions of OSI's Physical and Data Link layers, focusing on how data is sent/received on a network medium.
+2. **Internet**: Corresponds to the Network layer in OSI, handling data routing, IP addressing, and packet forwarding.
+3. **Transport**: Similar to OSI's Transport layer, ensuring data reaches the correct application and is transmitted reliably (TCP) or quickly (UDP).
+4. **Application**: Merges the functions of OSI's Session, Presentation, and Application layers, dealing with end-user application processes.
 
-7. **Database: Storing** frequently accessed database queries and results to speed up future requests.
+# Security
+In system design, ensuring robust network security is paramount to protect sensitive data and maintain the trust of users and stakeholders, ensure business continuity, and meet regulatory requirements.
 
-# Top Caching Strategies
+## Common Threats and Vulnerabilities
+1. **DDoS Attacks**: Malicious attempts to disrupt the normal traffic of a targeted server, service, or network by overwhelming it with a flood of internet traffic.
+2. **Malware**: Software designed to disrupt, damage, or gain unauthorized access to a computer system. This includes viruses, worms, spyware, and ransomware.
+3. **Man-in-the-Middle Attacks**: Attackers secretly intercept and relay communication between two parties. They can eavesdrop or impersonate one of the parties, deceiving the other.
+4. **Insider Threats**: Threats originating from within the organization, such as employees, former employees, or partners with inside information concerning security practices.
+5. **Software Flaws**: Bugs or weaknesses in software can be exploited to gain unauthorized access or disrupt services. Examples include buffer overflows and unhandled exceptions.
+6. **Hardware Weaknesses**: Physical components can have vulnerabilities, like firmware that can be tampered with or backdoors installed by manufacturers.
+7. **Misconfigured Network Devices**: Devices like routers, switches, or firewalls that are not correctly configured can expose the network to various threats.
+8. **Weak Authentication and Authorization**: Insufficient password policies, lack of multi-factor authentication, or lax access controls can allow unauthorized access.
+9. **Unencrypted Data**: Data that isn't encrypted can be easily intercepted and read as it travels across a network.
+10. **Outdated Systems**: Systems that are no longer supported or haven't been updated can have known vulnerabilities that are easy to exploit.
+11. **Physical Vulnerabilities**: This refers to physical access points where an attacker could plug into the network or access servers directly.
 
-## Cache Aside
+## Best Practices for Ensuring Network Security
+1. **Firewalls**: Deploy hardware and software firewalls to monitor and control incoming and outgoing network traffic based on security policies.
+2. **Encryption**: Use encryption protocols, especially for sensitive data, both in transit (like SSL/TLS for web traffic) and at rest (like database encryption).
+3. **Regular Updates**: Keep all systems, software, and applications updated to patch vulnerabilities.
+4. **Multi-Factor Authentication (MFA)**: Implement MFA to add a layer of security, ensuring that users provide two or more verification factors to gain access.
+5. **Network Monitoring**: Use network monitoring tools to monitor the network for unusual activities or unauthorized access continuously.
+6. **Security Awareness Training**: Educate employees and users about the importance of security and how to recognize potential threats.
+7. **Network Segmentation**: Limits the spread of threats within the network and provides better control over data access.
+8. **Backup and Disaster Recovery**: Ensures data availability and business continuity in case of breaches or failures.
+9. **Physical Security**: Physical access to network devices can lead to breaches.
 
-![](/img/posts/cache/cache_02-min.svg)
+#Conclusion
+Grasping the fundamentals of networking, from the intricacies of topologies to the nuances of basic protocols, is not merely an academic exercise—it's crucial for creating robust and efficient systems.
 
-Also known as "Lazy Loading," this strategy involves loading data into the cache on demand. When an application requests data, it first checks the cache. If the data is not found (cache miss), it is fetched from the database and stored in the cache for future requests.
-
-**Pros:**
-* Prevents unnecessary data from being loaded into the cache.
-* Offers fine-grained control over what is cached.
-
-**Cons:**
-* This can lead to increased latency for cache misses as the application must wait for data to be loaded from the database.
-* Requires additional complexity in application code to manage caching logic.
-
-## Read Through
-
-![](/img/posts/cache/cache_03-min.svg)
-
-In this approach, data is automatically loaded into the cache from the database when there is a cache miss. The application only interacts with the cache and not directly with the database for read operations.
-
-**Pros:**
-* Simplifies application logic as the caching layer handles data loading.
-* Ensures that only requested data is loaded into the cache, saving space.
-
-**Cons:**
-* Initial read operations may be slower due to cache misses and subsequent database access.
-* The cache can become a bottleneck if it is not efficiently managed.
-
-## Write Around
-
-![](/img/posts/cache/cache_04-min.svg)
-
-When data is written, it is written directly to the database and not to the cache. The cache is only updated when data is read.
-
-**Pros:**
-* Reduces cache churn by avoiding caching data that is infrequently read.
-* Minimizes the risk of cache and database getting out of sync.
-
-**Cons:**
-* Can lead to slower read operations following a write, as the data must be loaded into the cache from the database.
-* May increase database load since every write goes directly to the database.
-
-## Write Back (Write Behind)
-
-![](/img/posts/cache/cache_05-min.svg)
-
-Data is first written to the cache and then, after a certain amount of time or under certain conditions, written back to the database. This allows for batch updates.
-
-**Pros:**
-* Improves write performance as operations are done quickly in the cache.
-* Reduces database load by batching write operations.
-
-**Cons:**
-* Risk of data loss if the cache fails before data is written back to the database.
-* Complexity in ensuring that the cache and database are eventually synchronized.
-
-## Write Through
-
-![](/img/posts/cache/cache_06-min.svg)
-
-Data is written simultaneously to the cache and the database. This ensures data consistency between the cache and database.
-
-**Pros:**
-* Guarantees data consistency as writes to the cache and database are synchronous.
-* Easy to implement and understand.
-
-**Cons:**
-* Can lead to higher latency for write operations as they must be completed in both cache and database.
-* Increased load on the database for every write operation.
-
-# Cache Eviction Policies
-
-Cache eviction policies are critical in caching systems due to the limited size of caches; they ensure optimal use of available space by determining which data to retain or discard. These policies enhance overall cache performance by keeping the most relevant data accessible while maintaining data accuracy and consistency by removing outdated or less frequently used information.
-
-The most well-known strategies include the following:
-
-1. **First In, First Out (FIFO):** Evicts the oldest items in the cache first, regardless of their usage frequency.
-2. **Least Recently Used (LRU):** Evicts the least recently accessed items first, assuming that items not accessed recently are less likely to be accessed in the future.
-3. **Most Recently Used (MRU):** Opposite of LRU, it evicts the most recently used items first. This can be useful when the most recent items are less likely to be reaccessed.
-4. **Least Frequently Used (LFU):** Prioritizes eviction of least frequently accessed items, assuming frequent access implies future relevance.
-5. **Most Frequently Used (MFU):** Eviction policy is a cache eviction strategy where the cache identifies and removes the data items that are accessed most frequently.
-6. **Random Replacement (RR):** Randomly selects a cache item to evict, which can be simpler to implement and effective in specific scenarios.
-7. **Size-Based Eviction:** Evicts items based on their size to manage the memory footprint, often used in combination with other policies.
-
-# Cache invalidation
-
-In addition to removing infrequently accessed items, caches often contain data that becomes obsolete or stale. These outdated cache entries need to be identified and slated for removal.
-
-The most well-known strategies include the following:
-
-1. **Time to Live (TTL):** Data is invalidated after a specified duration. When the TTL expires, the cached data is either automatically removed or marked as invalid. There are two approaches:
-    * **Active expiration:** A background process or thread periodically scans the cache to check the TTL of cache entries.
-    * **Passive expiration:** Checks the TTL of a cache entry at its access time.
-2. **Write-Invalidate:** When data is updated in the primary storage, corresponding cache entries are invalidated. This ensures consistency between the cache and the source.
-3. **Change Notification:** The cache listens for notifications from the data source about changes. When notified, the cache invalidates the relevant entries.
-4. **Polling:** The cache periodically checks the validity of its entries by comparing them with the source data.
-
-# Popular Solutions
-
-List of some popular caching solutions widely used in various applications and systems:
-
-1. **Redis:** An in-memory data structure store used as a database, cache, and message broker and known for its performance and flexibility.
-2. **Memcached:** A high-performance, distributed memory object caching system primarily used for speeding up dynamic web applications by alleviating database load.
-3. **Ehcache:** An open-source, Java-based cache that provides fast, off-heap storage. It’s widely used in Java applications for caching.
-4. **Apache Ignite:** A distributed database, caching, and processing platform designed for transactional, analytical, and streaming workloads at a large scale.
-5. **Hazelcast:** An in-memory computing platform that provides distributed caching, messaging, and computing. Often used for performance-critical applications.
-6. **Squid:** A caching and forwarding HTTP web proxy. It can cache web, DNS, and other computer network lookups for people sharing network resources.
-7. **CDN Solutions (like Akamai, Cloudflare):** These are not traditional caching solutions but are often used for caching static and dynamic content closer to the end users in distributed networks.
-
-In conclusion, caching is a critical component in modern computing, offering a powerful solution to enhance performance, reduce latency, and manage data efficiently across various systems and applications. From accelerating web page loading times to optimizing database queries, caching is pivotal in improving user experiences and system responsiveness. Popular solutions like Redis, Memcached, and CDN services demonstrate the versatility and adaptability of caching strategies to different needs, from small-scale applications to large, distributed architectures.
+A solid grounding in network principles ensures systems communicate seamlessly, adapt resiliently, and scale efficiently.
