--- a/_posts/2024-02-01-network.md
+++ b/_posts/2024-02-01-network.md
@@ -160,7 +160,7 @@ Network protocols are rules or standards that define how data is transmitted and
 
 The OSI and TCP/IP are two primary models that serve as guiding frameworks that describe the processes involved in data communication over a network.
 
-| a | OSI Model | Protocol | Data Format | TCP/IP Model
+|  | OSI Model | Protocol | Data Format | TCP/IP Model
 |-|-|-|-|-|
 | 7 | Application | HTTP, DNS, SMTP, FTP | Data | Application
 | 6 | Presentation | TLS, SSL | Data | Application
