--- a/_posts/2019-01-05-base64.md
+++ b/_posts/2019-01-05-base64.md
@@ -3,7 +3,7 @@ layout:     post
 title:      Base64
 subtitle:   
 author:     NDA
-header-img: img/posts/base64.jpg
+header-img: img/bg/App-code-obfuscation.png
 header-mask: 0.6
 catalog:    true
 tags:
