--- a/_posts/2024-02-01-network.md
+++ b/_posts/2024-02-01-network.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Network - System design
+title:      Network
 subtitle:   
 author:     NDA
 header-img: img/posts/bg07.jpg
