--- a/_posts/2024-01-31-cache.md
+++ b/_posts/2024-01-31-cache.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      Cache - System design
+title:      Cache
 subtitle:   
 author:     NDA
 header-img: img/posts/bg01.png
